--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -1,13 +1,33 @@
-<h1>Course Listing</h1>
+<div class="row">
+  <div class="col s12">
+    <h3 class="center-align">Course Listing</h3>
+  </div>
+</div>
 
-<ul>
-  <li>Code: CS111</li>
-  <li>Name: Intro to CS</li>
-  <li>Description: A thorough intro to CS</li>
-</ul>
+<div class="row">
+  <div class="col s6 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">CS111: Intro to CS</span>
+        <p>A thorough intro to CS. A thorough intro to CS. A thorough intro to CS.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Enroll</a>
+        <a href="#">Info</a>
+      </div>
+    </div>
+  </div>
 
-<ul>
-  <li>Code: CS112</li>
-  <li>Name: Intro to CS</li>
-  <li>Description: A thorough intro to CS</li>
-</ul>
+  <div class="col s6 m6">
+    <div class="card blue-grey darken-1">
+      <div class="card-content white-text">
+        <span class="card-title">CS112: Intro to CS2</span>
+        <p>Intermediate look at CS. Intermediate look at CS. Intermediate look at CS.</p>
+      </div>
+      <div class="card-action">
+        <a href="#">Enroll</a>
+        <a href="#">Info</a>
+      </div>
+    </div>
+  </div>
+</div>
