--- a/app/views/courses/index.html.erb
+++ b/app/views/courses/index.html.erb
@@ -5,29 +5,18 @@
 </div>
 
 <div class="row">
-  <div class="col s6 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">CS111: Intro to CS</span>
-        <p>A thorough intro to CS. A thorough intro to CS. A thorough intro to CS.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">Enroll</a>
-        <a href="#">Info</a>
-      </div>
-    </div>
-  </div>
-
-  <div class="col s6 m6">
-    <div class="card blue-grey darken-1">
-      <div class="card-content white-text">
-        <span class="card-title">CS112: Intro to CS2</span>
-        <p>Intermediate look at CS. Intermediate look at CS. Intermediate look at CS.</p>
-      </div>
-      <div class="card-action">
-        <a href="#">Enroll</a>
-        <a href="#">Info</a>
+  <% @courses.each do |course| %>
+    <div class="col s6 m6">
+      <div class="card blue-grey darken-1">
+        <div class="card-content white-text">
+          <span class="card-title"><%= course.short_name %>: <%= course.name %></span>
+          <p><%= course.description %>></p>
+        </div>
+        <div class="card-action">
+          <a href="#">Enroll</a>
+          <a href="#">Info</a>
+        </div>
       </div>
     </div>
-  </div>
+  <% end %>
 </div>
